Добавлена поддержка This_Goes_Here

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "<имя_мода>_RU",
+  "name": "BetterArchery_RU",
   "version_number": "1.0.1",
   "author": "lijspoop",
-  "website_url": "https://github.com/lijspoop/<имя_мода>_RU",
-  "description": "Перевод мода <имя_мода> на Русский.",
+  "website_url": "",
+  "description": "Перевод мода BetterArchery на Русский.",
   "dependencies": [
-    "ASharpPen-This_Goes_Here-2.1.1", УБРАТЬ ЕСЛИ МОЖНО ОБОЙТИСЬ YAML ФАЙЛОМ
-    "<Dependency-string-мода>"
+    "ASharpPen-This_Goes_Here-2.1.1",
+    "ishid4-BetterArchery-1.9.7"
   ]
 }
